# risetv2-rocm

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  visualize.ipynb
checkpoints/caers/: eval_test.json  history.json
configs/: agcd_net.yaml  caernet.yaml  caernet_full_train.yaml  caernet_official.yaml  caernet_paper_exact.yaml  caernet_resnet18_60ep.yaml  cd_ica_net.yaml  glamor_net.yaml  yang_ccim.yaml  zhou_cross_attention.yaml
docs/: 01_literature_review.md  02_research_gap.md  03_architecture.md  04_mathematics.md  05_training_strategy.md  06_abstract.md  07_novelty.md  08_reproduction_gap_analysis.md  09_remaining_differences.md  10_baseline_strategy.md  README.md
papers/: README.md  download_papers.sh
scripts/: build_caers_manifest.py  build_manifest_dlib.py  compare_face_detectors.py  detect_faces.py  detect_faces_mtcnn.py  detect_faces_mtcnn_batch.py  download_dataset.py  evaluate.py  evaluate_official_pretrained.py  generate_dlib_bboxes.py  smoke_data_pipeline.py  train.py
src/: cek_gpu.py
src/config/: config.py
src/datasets/: caers_dataset.py  transforms.py
src/engine/: evaluator.py  metrics.py  trainer.py
src/models/: caernet_official.py  common.py
src/models/agcd_net/: ag_cim.py  (+2 more)
src/utils/: data_manifest.py  device_utils.py  io_utils.py  logger.py  places365_loader.py
wandb/: latest-run
wandb/run-20260425_035939-chx454fl/: run-chx454fl.wandb
wandb/run-20260505_013540-zy2czgj1/: run-zy2czgj1.wandb
wandb/run-20260505_013723-gre7qo1x/: run-gre7qo1x.wandb
wandb/run-20260505_013822-vq2ayav8/: run-vq2ayav8.wandb
(+65 files in other folders)
